Add caching mechanism

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "name": "config",
   "version": "1.0.0",
-  "description": "Fix bug in validation"
+  "description": "Fix bug in validation",
+  "updated": "2026-01-09T22:24:38.871392"
 }
